[tool.poetry]
name = "sweetener"
version = "0.0.1"
description = "Clean up blood sugar data from MySugr App for evaluation by DDD nurse."
authors = ["Zhu Zhanyan <program.nom@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
openpyxl = "~3.0.9"
pandas= "~1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
